Integration of Contact
Contact Page integrated and few other changes

--- a/src/assets/HomeComponents/Card2/NewCard.css
+++ b/src/assets/HomeComponents/Card2/NewCard.css
@@ -11,10 +11,12 @@
   height: 300px;
   overflow: hidden;
   transition: max-width 0.3s ease-in-out; /* Smooth animation */
+  opacity: 0.9;
 }
 
 .new-card:hover {
-  max-width: 600px; /* Expand to 600px on hover */
+  max-width: 800px; /* Expand to 600px on hover */
+  opacity: 1;
 }
 
 .new-card-content {
@@ -32,7 +34,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center; /* Center the title */
-  background: url('your-image-url.jpg') center center/cover no-repeat;
+  background: url('../HomeImages/HumbleCodersBG.jpg') center center/cover no-repeat;
 }
 
 .new-card-hidden {
@@ -46,10 +48,11 @@
   background-color: #f0f0f0; /* Background color for the extended part */
   transition: opacity 0.3s ease-in-out;
   text-align: center; /* Center the description text */
+  opacity: 0.5;
 }
 
 .new-card:hover .new-card-hidden {
-  opacity: 1;
+  opacity: 0.9;
 }
 
 .new-card-title {
