--- a/src/assets/HomeComponents/Card3/ThirdCard.css
+++ b/src/assets/HomeComponents/Card3/ThirdCard.css
@@ -9,10 +9,12 @@
   height: 300px;
   overflow: hidden;
   transition: max-width 0.3s ease;
+  opacity: 0.9;
 }
 
 .third-card:hover {
-  max-width: 600px; /* Expand to 600px on hover */
+  max-width: 800px; /* Expand to 600px on hover */
+  opacity: 1;
 }
 
 .third-card-content {
@@ -30,7 +32,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center; /* Center the title */
-  background: url('your-image-url.jpg') center center/cover no-repeat;
+  background: url('../HomeImages/HumbleCodersBG.jpg') center center/cover no-repeat;
 }
 
 .third-card-hidden {
@@ -38,7 +40,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   padding: 20px;
   opacity: 0;
   background-color: #f0f0f0; /* Background color for the extended part */
@@ -63,7 +65,7 @@
   .third-card-wrapper {
     justify-content: center;
     align-items: center;
-    transform: translate(0, -110px); /* Center on small screens */
+    transform: translate(0, -890px); /* Center on small screens */
   }
 }
 
