--- a/src/assets/Pages/registration.css
+++ b/src/assets/Pages/registration.css
@@ -1,9 +1,30 @@
-.main-container {
-    background-image: url('path-to-your-image.jpg'); /* Path to your image */
-    background-size: cover; /* Ensure the image covers the entire area */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Avoid repeating the image */
-    min-height: 100vh; /* Cover the entire viewport */
-    padding: 20px; /* Optional padding */
-  }
-  
+.main-container-Register {
+  position: relative;
+  min-height: 100vh; /* Cover the entire viewport */
+  padding: 20px; /* Optional padding */
+  overflow: hidden; /* Hide overflow */
+  background-image: url('./Images/BG0.8.jpg'); /* Path to your image */
+  background-attachment: fixed; /* Fix the background */
+  background-size: cover; /* Ensure the image covers the entire area */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Avoid repeating the image */
+}
+
+.main-container-Register::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5); /* Light semi-transparent overlay */
+  z-index: -1; /* Ensure it’s behind the content */
+  pointer-events: none; /* Allow clicks through the overlay */
+}
+
+.content {
+  position: relative;
+  z-index: 2;
+  height: 100vh;
+  overflow-y: auto; /* Enable vertical scrolling */
+}
