--- a/src/assets/HomeComponents/Achievements.css
+++ b/src/assets/HomeComponents/Achievements.css
@@ -5,4 +5,14 @@
     text-align: center;
     color: aliceblue;
   }
-  
+.Achievements-section {
+  background-color: rgb(0, 0, 0,0.8);
+  align-content: center; 
+  max-height: 1300px; 
+  max-width: 1300px;
+  margin: 0 auto; /* Horizontally centers the element */
+  justify-content: center; /* Centers horizontally */
+  align-items: center; /* Centers vertically */
+  border-radius: 50px;
+  border: 2px solid yellow;
+}
