--- a/src/assets/Pages/Contact.css
+++ b/src/assets/Pages/Contact.css
@@ -36,7 +36,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('./images/contact_us_bg.jpg');
+  background-image: url('./images/images/contact_us_bg.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
