--- a/src/assets/Pages/Home.css
+++ b/src/assets/Pages/Home.css
@@ -3,7 +3,7 @@
     min-height: 100vh; /* Cover the entire viewport */
     padding: 20px; /* Optional padding */
     overflow: hidden; /* Hide overflow */
-    background-image: url('./images/HomeBG.png'); /* Path to your image */
+    background-image: url('./images/HomeB.jpeg'); /* Path to your image */
     background-attachment: fixed; /* Fix the background */
     background-size: cover; /* Ensure the image covers the entire area */
     background-position: center; /* Center the image */
