--- a/src/assets/Content/ContentSection.css
+++ b/src/assets/Content/ContentSection.css
@@ -27,7 +27,7 @@
   font-size: 18px;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .content-text {
     font-size: 14px;
     padding: 8px;
@@ -51,6 +51,7 @@
   font-family: 'Moontime', sans-serif;
   font-size: 35px;
   color: yellow;
+  align-items: center;
 }
 
 /* New styles for the RegisterUp component */
@@ -64,10 +65,10 @@
   padding: 10px;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .register-up-container {
-    position: static; /* Reset position for small screens */
-    justify-content: center; /* Center the button on smaller screens */
+    position: static; /* Reset position for small and medium screens */
+    justify-content: center; /* Center the button on small and medium screens */
     padding: 10px 0;
   }
 }
