--- a/src/assets/Pages/About/About.css
+++ b/src/assets/Pages/About/About.css
@@ -1,22 +1,21 @@
 /* About.css */
 .Achievement-container{
-    border: 2px solid #000000;
     border-radius: 8px;
     padding: 20px;
     margin: 20px;
     margin-top: 100px; /* Adjust this value as needed */
-    background-color: #f9f9f9;
+    background-color: #f7fbfe;
   }
 
 
 
   .Workshop-container{
-    border: 2px solid #000000;
+    border: 2px solid #f9f9f9;
     border-radius: 8px;
     padding: 20px;
     margin: 20px;
-    margin-bottom: 50px; /* Adjust this value as needed */
-    background-color: #f9f9f9;
+    margin-top: 100px; /* Adjust this value as needed */
+    background-color: #f7fbfe;
 
   }
 
@@ -34,6 +33,23 @@
     .image {
       height: 200px; /* Adjust image height for small screens */
     }
+  }
+
+  .AboutCard {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .col-md-4 {
+    display: flex;
+    flex-direction: column;
   }
   
   
