--- a/src/assets/Pages/Contact/Contact.css
+++ b/src/assets/Pages/Contact/Contact.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: aliceblue;
+    background-color: #d7edf7;
   }
   
   /* Ensure navbar stays above content */
